compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__patterns__alternative_patterns.snap
---
source: compiler-core/src/erlang/tests/patterns.rs
expression: "\npub fn main() {\n  let duplicate_name = 1\n\n  case 1 {\n    1 | 2 -> {\n      let duplicate_name = duplicate_name + 1\n      duplicate_name\n    }\n    _ -> 0\n  }\n}"
---
----- SOURCE CODE

pub fn main() {
  let duplicate_name = 1

  case 1 {
    1 | 2 -> {
      let duplicate_name = duplicate_name + 1
      duplicate_name
    }
    _ -> 0
  }
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> integer().
main() ->
    Duplicate_name = 1,
case 1 of
    1 ->
        Duplicate_name@1 = Duplicate_name + 1,
        Duplicate_name@1;

    2 ->
        Duplicate_name@1 = Duplicate_name + 1,
        Duplicate_name@1;

    _ ->
        0
end.
