compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__patterns__pattern_as.snap
---
source: compiler-core/src/erlang/tests/patterns.rs
expression: "pub fn a(x) {\n  case x {\n    Ok(1 as y) -> 1\n    _ -> 0\n  }\n}"
---
----- SOURCE CODE
pub fn a(x) {
  case x {
    Ok(1 as y) -> 1
    _ -> 0
  }
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([a/1]).

-file("project/test/my/mod.gleam", 1).
-spec a({ok, integer()} | {error, any()}) -> integer().
a(X) ->
    case X of
    {ok, 1 = Y} ->
        1;

    _ ->
        0
end.
